<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonutActivity">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/donut_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/Donut_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/css_grey"
                android:paddingBottom="10dp"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/Donut_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/Donut_image"
                android:layout_marginTop="4dp"
                android:padding="10dp"
                android:text="@string/recipe_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#ffff00"
                android:theme="@style/ThemeOverlay.AppCompat.Light"

                />

            <TextView
                android:id="@+id/Donut_prep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Donut_title"
                android:layout_marginTop="4dp"
                android:padding="10dp"
                android:text="@string/prep_cook_time_2hrs"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="?android:textColorSecondary"
                android:drawableStart="@drawable/ic_baseline_access_time_24"
                android:theme="@style/ThemeOverlay.AppCompat.Light"

                />
            <!-- add horizontal line -->
            <View
                android:id="@+id/Donut_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/Donut_prep"
                android:background="@color/css_grey"/>
            <TextView
                android:id="@+id/Donut_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_short_description"
                android:textColor="@color/navy_blue"
                android:layout_below="@+id/Donut_divider"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginTop="3dp"
                android:textStyle="italic"
                android:theme="@style/ThemeOverlay.AppCompat.Light"/>



        </RelativeLayout>




    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:layout_below="@id/donut_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/how_to_prepare_donuts"
        android:textStyle="bold"
        android:textColor="@color/navy_blue"/>

</RelativeLayout>